# ZDEM_DFN

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  gen_dfn_engine.py  pyproject.toml  requirements.txt  setup.py
docs/: index.md
tests/: test_geometry.py  test_smoke.py
zdem_dfn/: __init__.py  engine.py
