[project]
name = "zdem-dfn"
version = "0.1.0"
description = "ZDEM_DFN"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.62.0",
  "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
